--- a/notebooks/tmdb.ipynb
+++ b/notebooks/tmdb.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3958ac2b",
+   "execution_count": 1,
+   "id": "ed19faca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,8 +20,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "28ac4e43",
+   "execution_count": 2,
+   "id": "e1baacdc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,8 +31,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b775e5bf",
+   "execution_count": 3,
+   "id": "6c01a65b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,8 +41,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "cd7c4a8e",
+   "execution_count": 4,
+   "id": "9659c462",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ec8f7dd",
+   "id": "d6bd3562",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ae99c6d",
+   "id": "e7f58858",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,11 +100,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "443bd323",
+   "id": "bb55727e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "tmdb_movie_data = {'title':movie_title, 'movie_id':movie_ids, 'original_lanuage':original_lanuage, 'movie_popularity':movie_popularity, 'movie_release_date':movie_release_date, 'movie_avg_vote':movie_avg_vote, 'movie_vote_count':movie_vote_count}\n",
+    "tmdb_movie_data = {'movie_title':movie_title, 'movie_id':movie_ids, 'original_lanuage':original_lanuage, 'movie_popularity':movie_popularity, 'movie_release_date':movie_release_date, 'movie_avg_vote':movie_avg_vote, 'movie_vote_count':movie_vote_count}\n",
     "tmdb_movie_df = pd.DataFrame(tmdb_movie_data)\n",
     "display(tmdb_movie_df)"
    ]
@@ -112,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b8d020a",
+   "id": "324a4ee8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06d058a3",
+   "id": "e247511a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87440f66",
+   "id": "71357417",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be2bea74",
+   "id": "b5879171",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32ede9b6",
+   "id": "87c5817b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da929db5",
+   "id": "1953fefd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,33 +207,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5300273b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tmdb_cast_info[0]['crew'][0]['gender']\n",
-    "tmdb_cast_info[0]['crew'][0]['id']\n",
-    "tmdb_cast_info[0]['crew'][0]['known_for_department']\n",
-    "tmdb_cast_info[0]['crew'][0]['name']\n",
-    "tmdb_cast_info[0]['crew'][0]['popularity']\n",
-    "tmdb_cast_info[0]['crew'][0]['department']\n",
-    "tmdb_cast_info[0]['crew'][0]['job']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "526cb637",
+   "id": "4742cc57",
    "metadata": {},
    "outputs": [],
    "source": [
     "i = 0\n",
-    "movie_id = []\n",
+    "cast_movie_id = []\n",
     "cast_sex = []\n",
     "cast_known_for_department = []\n",
     "cast_name = []\n",
     "cast_popularity = []\n",
     "cast_id = []\n",
+    "crew_movie_id = []\n",
     "crew_sex = []\n",
     "crew_id = []\n",
     "crew_known_for_department = []\n",
@@ -242,7 +227,6 @@
     "crew_department = []\n",
     "crew_job = []\n",
     "while i < len(tmdb_cast_info):\n",
-    "    movie_id.append(tmdb_cast_info[i]['id'])\n",
     "    x = 0\n",
     "    y = 0\n",
     "    while x < len(tmdb_cast_info[i]['cast']):\n",
@@ -261,13 +245,91 @@
     "        crew_department.append(tmdb_cast_info[i]['crew'][y]['department'])\n",
     "        crew_job.append(tmdb_cast_info[i]['crew'][y]['job'])\n",
     "        y=y+1\n",
+    "    for cast in range(x):\n",
+    "        cast_movie_id.append(tmdb_cast_info[i]['id'])\n",
+    "    for crew in range(y):\n",
+    "        crew_movie_id.append(tmdb_cast_info[i]['id'])\n",
     "    i = i+1"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dbddf6ae",
+   "id": "7c1c6ee2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(cast_movie_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b0736f11",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(cast_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b0164947",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(crew_movie_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "51889692",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(crew_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b167d5e4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tmdb_cast_data = {'movie_id':cast_movie_id, 'cast_id':cast_id, 'cast_name':cast_name, 'cast_sex':cast_sex, 'cast_known_for_department':cast_known_for_department, 'cast_popularity':cast_popularity}\n",
+    "tmdb_cast_df = pd.DataFrame(tmdb_cast_data)\n",
+    "display(tmdb_cast_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "09f380cb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tmdb_crew_data = {'movie_id':crew_movie_id, 'crew_id':crew_id, 'crew_name':crew_name, 'crew_sex':crew_sex, 'crew_known_for_department':crew_known_for_department, 'crew_popularity':crew_popularity, 'crew_department':crew_department, 'crew_job':crew_job}\n",
+    "tmdb_crew_df = pd.DataFrame(tmdb_crew_data)\n",
+    "display(tmdb_crew_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a26ba60d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_data = {'movie_id':movie_id, 'genre':genre_ids}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "08f01abd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,15 +339,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a96e544",
+   "id": "ca2d112d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "len(genre_ids)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3bc6a95e",
+   "id": "f9887708",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_df = pd.DataFrame(test_data)\n",
+    "display(test_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0862036b",
    "metadata": {},
    "outputs": [],
    "source": []
