Used the explode function to make the genres dataframe. Next task is to make excel spreadsheets out of each dataframe and then move on to visuals.

--- a/notebooks/tmdb.ipynb
+++ b/notebooks/tmdb.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "ed19faca",
+   "execution_count": null,
+   "id": "d84a7116",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,8 +20,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "e1baacdc",
+   "execution_count": null,
+   "id": "e27d8742",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,8 +31,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "6c01a65b",
+   "execution_count": null,
+   "id": "0f0a9fea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,8 +41,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "9659c462",
+   "execution_count": null,
+   "id": "1e2967dd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6bd3562",
+   "id": "57c5436b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e7f58858",
+   "id": "d1504c4b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb55727e",
+   "id": "abf88a59",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "324a4ee8",
+   "id": "2d27a348",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e247511a",
+   "id": "0516a36d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71357417",
+   "id": "dd930616",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b5879171",
+   "id": "14b0db77",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87c5817b",
+   "id": "0444d986",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1953fefd",
+   "id": "69d46059",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4742cc57",
+   "id": "2e8441fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +255,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c1c6ee2",
+   "id": "cd0b98e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0736f11",
+   "id": "8511cf74",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0164947",
+   "id": "8d726b6b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51889692",
+   "id": "a559ac82",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +295,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b167d5e4",
+   "id": "66c67873",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +307,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "09f380cb",
+   "id": "c8c3a978",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,27 +319,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a26ba60d",
+   "id": "817b3cd1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_data = {'movie_id':movie_id, 'genre':genre_ids}"
+    "movie_genres_data = {'movie_id':movie_ids, 'genre':genre_ids}"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08f01abd",
+   "id": "cef62fc8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "len(movie_id)"
+    "len(movie_ids)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ca2d112d",
+   "id": "3c5d0ad0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,18 +349,98 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9887708",
+   "id": "d2f353a8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_df = pd.DataFrame(test_data)\n",
-    "display(test_df)"
+    "movie_genres_df = pd.DataFrame(movie_genres_data)\n",
+    "display(movie_genres_df)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0862036b",
+   "id": "d190b665",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_genre(api_key):\n",
+    "    url = f'https://api.themoviedb.org/3/genre/movie/list?api_key={api_key}&language=en-US'\n",
+    "    \n",
+    "    res = requests.get(url)\n",
+    "    \n",
+    "    genre_object = res.json()\n",
+    "    \n",
+    "    return genre_object "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9ea8cfd1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "genre_name_data = get_genre(api_key)\n",
+    "genre_name_df = pd.DataFrame(genre_name_data['genres'])\n",
+    "display(genre_name_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ca0e6cc1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "map_dict = dict(zip(genre_name_df.id,genre_name_df.name))\n",
+    "movie_genres_df['genre'] =  movie_genres_df['genre'].explode().map(map_dict).groupby(level=0).agg(list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "52b9ef2d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "movie_genres_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "41252962",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "genre_id_list = list(movie_genres_df['genre'].explode().unique())[:-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "58da76c4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "movie_genres_exploded = movie_genres_df.explode('genre').groupby(['movie_id', 'genre']).size().to_frame('counts').reset_index().pivot(index='movie_id', columns='genre', values='counts').reset_index().fillna(0)\n",
+    "movie_genres_df = movie_genres_df[['movie_id', 'genre']].merge(result)\n",
+    "display(movie_genres_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fab3a834",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b1be73d3",
    "metadata": {},
    "outputs": [],
    "source": []
