--- a/notebooks/tmdb.ipynb
+++ b/notebooks/tmdb.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d84a7116",
+   "id": "ac531127",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e27d8742",
+   "id": "d4b8c3f5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f0a9fea",
+   "id": "5fcd568a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e2967dd",
+   "id": "ef3cbe29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57c5436b",
+   "id": "138d6854",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d1504c4b",
+   "id": "488c336c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "abf88a59",
+   "id": "b109d399",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d27a348",
+   "id": "bb982acc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0516a36d",
+   "id": "c2e6e29d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd930616",
+   "id": "3e90719f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14b0db77",
+   "id": "83a76d0a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0444d986",
+   "id": "f4b205ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69d46059",
+   "id": "a6f160fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e8441fc",
+   "id": "286eb617",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +255,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd0b98e8",
+   "id": "07d02f9a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8511cf74",
+   "id": "de0331cb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d726b6b",
+   "id": "11881351",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a559ac82",
+   "id": "6c9aa024",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +295,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66c67873",
+   "id": "519a9147",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +307,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8c3a978",
+   "id": "07b37c6b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +319,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "817b3cd1",
+   "id": "028f0b34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +329,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cef62fc8",
+   "id": "38d20bc0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c5d0ad0",
+   "id": "50a92d76",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d2f353a8",
+   "id": "74ab8a06",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,7 +360,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d190b665",
+   "id": "b44d3766",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +377,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ea8cfd1",
+   "id": "eb5913a9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ca0e6cc1",
+   "id": "c3baad38",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,7 +400,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52b9ef2d",
+   "id": "6928acec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,7 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41252962",
+   "id": "68ea32f5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,30 +420,134 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58da76c4",
+   "id": "d7646d93",
    "metadata": {},
    "outputs": [],
    "source": [
     "movie_genres_exploded = movie_genres_df.explode('genre').groupby(['movie_id', 'genre']).size().to_frame('counts').reset_index().pivot(index='movie_id', columns='genre', values='counts').reset_index().fillna(0)\n",
-    "movie_genres_df = movie_genres_df[['movie_id', 'genre']].merge(result)\n",
+    "movie_genres_df = movie_genres_df[['movie_id', 'genre']].merge(movie_genres_exploded)\n",
     "display(movie_genres_df)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fab3a834",
+   "id": "10db5a18",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "writer1 = pd.ExcelWriter('movie_genres_data.xlsx')"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b1be73d3",
+   "id": "3e7b8b80",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "movie_genres_df.to_excel(writer1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a22758a0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "writer1.save()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7da27740",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "writer2 = pd.ExcelWriter('tmdb_movie_data.xlsx')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0a49acf8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tmdb_movie_df.to_excel(writer2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "35be76c7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "writer2.save()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c80c9ab8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "writer3 = pd.ExcelWriter('tmdb_production_data.xlsx')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2db3aae7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tmdb_production_df.to_excel(writer3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "86f15839",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "writer3.save()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0678b0f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "writer4 = pd.ExcelWriter('tmdb_cast_data.xlsx')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e53521b9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tmdb_cast_df.to_excel(writer4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6d39c5aa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "writer4.save()"
+   ]
   }
  ],
  "metadata": {
